feat: Implement output path override setting to delete existing files before new downloads